--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 :root {
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
-  --first-color: hsl(228, 81%, 49%);
+  --first-color: #FCA4A6;
   --title-color: hsl(228, 12%, 15%);
   --text-color: hsl(228, 8%, 50%);
   --body-color: hsl(228, 100%, 99%);
