--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   --first-color: #FCA4A6;
   --title-color: hsl(228, 12%, 15%);
   --text-color: hsl(228, 8%, 50%);
-  --body-color: hsl(228, 100%, 99%);
+  --body-color: #FCA4A6;
   --container-color: #fff;
 
   /*========== Font and typography ==========*/
